Fix aside alignment.

--- a/mike/style.css
+++ b/mike/style.css
@@ -52,7 +52,7 @@ footer {
 }
 
 header aside {
-  margin-top: 80px;
+  margin-top: 88px;
 }
 
 header aside,
